--- a/FileHacker/FHRemoteShutDown/FHRemoteShutDown.vbproj
+++ b/FileHacker/FHRemoteShutDown/FHRemoteShutDown.vbproj
@@ -182,6 +182,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="OrderManager.vb" />
     <Compile Include="PictureTools.vb" />
     <Compile Include="PowerManager.vb" />
     <Compile Include="SchoolPCChecker.vb" />
